--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,11 @@
+:global(body) {
+  margin: 0;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   text-align: center;
 }
 
