--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -1,7 +1,22 @@
 .navbar {
- 
-  padding: 1rem 1.25rem;
-  background-color: #fff;
+  width: 100%;
+  z-index: 50;
+}
+
+
+.navbar:not(.navbar__overlay) {
+  position: sticky;
+  top: 0;
+  background: #fff;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+}
+
+
+.navbar__overlay {
+position: absolute;
+  top: 1rem;
+  left: 1.8rem;
+  background: transparent;
 }
 
 .navbar__nav {
@@ -13,13 +28,14 @@
 }
 
 .navbar__brand {
-  font-weight: 700;
+  font-size: larger;
   text-decoration: none;
   color: #111;
 }
 
 .navbar__links {
   display: flex;
+  font-size: 1.2rem;
   gap: 1.25rem;
   align-items: center;
 }
@@ -31,4 +47,12 @@
 .active {
   font-weight: 600;
   text-decoration: none;
+}
+
+.navbar__overlay a {
+  color: #fff;
+}
+
+.navbar__overlay a:hover {
+  opacity: 0.9;
 }
