--- a/src/App.scss
+++ b/src/App.scss
@@ -1,16 +1,21 @@
 :global(body) {
   margin: 0;
+  min-height: 100vh;
 }
 
 #root {
+  min-height: 100vh;
   width: 100%;
   margin: 0;
   padding: 0;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .app {
   max-width: 1200px;
   margin: 0 auto;
   padding: 1.25rem;
+ // flex: 1;
 }
